[B] sanity_blast did nothing.
[B] some monsters became 'immune' to spell attacks. (project_m)
[H] added a filter for RF7_PET/RF7_NEUTRAL monsters.
[H] sleeping monsters don't emit light any more.
    (it's strange with monsters like yellow light, but forget it for now :)
[H] ')' command (clear buffer) works in a better way.

30/06/2002 (Jir)
- Flint.
- USE_PK_RULES
[B] reversing curse worked for normal 'remove curse' scroll.



** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
things to do before 4.0.0

- implement guest-account
- rebalance skill-points
- devise a nice way to control ego-item generation w/o luck
- fix gfx
- refine pk code
- source-code cleanup
- sort ?_info.txt (they are quite messy now)
- export configurable things to tomenet.cfg
- a spoonful of documentation for skill system

(multi-dungeon, multi-town, terrains, pets etc. are put off after 4.0.0 ...)


=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + SKILL_CLIMB
  + spell_info should be redone
  * a mage would just raise 'Sorcery' to 10 for Wraithform..
    is it within the design?
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.